# mesh2sdf

./: .gitignore  Cargo.toml  out.txt  readme.md  todo.txt
assets/: compute_sdf.wgsl  render_sdf.wgsl  sphere.glb  spike.blend  spike.glb  teapot.glb  teapot.gltf
assets/gltf/: cone.glb  dragon.glb  fox2.glb  monkey.glb
assets/shader/: compute_sdf.wgsl  render_sdf.wgsl
examples/: gltf.rs  gltf_cpu.rs  gltf_gpu.rs  scene.rs  teapot.rs
src/: animated_aabb.rs  compute.rs  controller.rs  cpu.rs  debug_render.rs  lib.rs  render.rs  sdf_ambient.wgsl  sdf_view_bindings.rs  sdf_view_bindings.wgsl  shader.rs  utils.rs
